Refactoring support for RefreshController
